src/components/css/styles.css
/* ... */
.renderContainers.login-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 40%;
  width: 50%;
  margin: 0 auto;
  border-radius: 0.7rem;
  padding-top: 30px;
  padding-bottom: 120px;
}

.renderContainers.signup-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 40%;
  width: 50%;
  margin: 5vh auto;
  border-radius: 0.7rem;
  padding-top: 30px;
  padding-bottom: 120px;
}

.container-heading{
  margin: 10px;
}

.settings-container.inner-box {
  border-radius: 0.7rem;
}

.header {
  line-height: 90px;
  font-size: 12px;
  font-weight: 800;
  background: #e1e4e6;
}

.header span {
  font-size: 24px;
}

.header div * {
  margin: 2px;
}

.tabTitle {
  margin: 50px 15px;
  font-weight: bolder;
  font-size: 30px;
}

.runByButton {
  float: right;
  margin-right: 50px;
}

.containers {
  display: flex;
  flex-wrap: wrap;
  background-color: #e1e4e6;
  max-height: 800px;
  overflow-y: auto;
}

.viewsAndButton {
  display: flex;
  flex-direction: column;
  height: 75%;
  align-items: center;
}

.login-buttons {
  width: 100%;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
}

.register.login-buttons:hover {
  background-color: #e3f6f5;
}

.signup-btn {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.viewsAndButton div {
  margin-top: 50px;
}

.box {
  margin-top: 20px;
  margin-right: 20px;
  min-width: 250px;
  background: white;
  padding-bottom: 10px;
  position: relative;
  border-radius: 10px;
}

.stopped-containers {
  display: flex;
  flex-wrap: wrap;
  min-width: auto;
}


.box-running {
  border-radius: 0.7rem;
}

.toggle-box {
  transform: translate(-5px, 5px);
}

.box-button-running {
  transform: translate(0px, 0px);
  box-shadow: 0px 9px 7px rgba(146, 139, 148, 1);
  padding: 10px;
}

.box-label {
  color: white;
  display: flex;
  font-weight: bolder;
  flex-direction: column;
  background: #052e41c0;
  padding: 10px;
  border-radius: 10px 10px 0 0;
  justify-content: flex-start;
}

.box-label h3 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.box-label p {
  font-size: 14px;
  color: rgb(187, 186, 186);
}

.box-info {
  background: none;
  font-size: 11px;
  margin-left: 10px;
  margin-right: 10px;
}

.box li {
  color: black;
  margin: 5px;
  width: 100%;
}

.tab ul li:hover {
  /* border-left: #e1e4e6 5px solid; */
  
}

.tab ul li a:hover {
  font-weight: 900;
  color: #ecfffe;
}

.tab ul li a:hover i {
  padding-left: 20px;
}

.box-buttons {
  text-align: center;
}

.tab header {
  background: #042331;
  border-top-left-radius: 40px;
  text-align: center;
  line-height: 85px;
  margin-top: 25px;
  margin-bottom: 30px;
  font-weight: 700;
  font-size: 35px;
  color: #e1e4e6;
}

.tab ul li {
  line-height: 65px;
}

.tab ul li a {
  display: block;
  background: #042331;
  font-size: 18px;
  color: white;
  text-decoration: none;
  padding-left: 25px;
}

.stopped-header {
  color: white;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  flex-direction: column;
  padding: 10px;
  /* border-radius: 10px 10px 0 0; */
  justify-content: center;
  align-items: flex-start;
  background: #3c3d3da9;
  color: white;
  text-align: center;
  /* border-radius: 10px 10px 0 0; */
  margin-bottom: 10px;
}

.stopped-info {
  margin-left: 5px;
  margin-right: 5px;
}

.stopped-info ul {
  font-size: 14px;
  overflow: hidden;
}

.stopped-button {
  text-align: center;
  background: white;
  margin-top: 10px;
  margin-bottom: 7px;
}

.images-header {
  background: rgba(0, 0, 128, 0.75);
  font-weight: bold;
  font-size: 16px;
  color: white;
  text-align: start;
  /* border-radius: 10px 10px 0 0; */
  margin-bottom: 10px;
  padding: 10px;
}

.chart-container {
  width: 350px;
  margin-bottom: 30px;
  border-radius: 10px 10px 0 0;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
}

.dougnutChart {
  height: 170px;
  width: 280px;
}

.metricCharts {
  width: 100%;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.allCharts {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  background-color: white;
  margin: 20px 0px;
  height: 320px;
  width: calc(50% - 30px);
  padding: 20px;
  box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
  border-radius: 0.3rem;
  transition: width 0.5s ease-in;
}

.allCharts.expanded-chart {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  background-color: white;
  margin: 20px 0px 20px 0px;
  height: 400px;
  width: 100%;
  transition: width 0.7s ease-out;
}

.buttonDisplay {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-content: center;
}

.chart-btn {
  border: none;
  margin-bottom: 10px;
  background: none;
}

.gitHub-container {
  text-align: left;
  background-color: white;
  margin: 20px 0px 20px 0px;
  height: 100%;
  padding: 15px;
  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
    0 0 40px rgba(0, 0, 0, 0.1) inset;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}

.users-container {
  border-radius: 0.5rem;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
}
/* ... */

